--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,11 +6,25 @@ html {
   scroll-behavior: smooth;
 }
 
-h1,
+/* ::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.3rem;
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #272629;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #5d6061;
+} */
+
+/* h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
   font-family: "Raleway", sans-serif;
-}
+} */
